chia nhỏ các file css lớn thành các components css nhỏ

--- a/index.html
+++ b/index.html
@@ -15,7 +15,24 @@
     <link href="https://fonts.googleapis.com/css2?family=Sora:wght@400;500;600;700;800&display=swap" rel="stylesheet">
 
     <!-- LINK CSS VÀ FONT AWESOME -->
-    <link rel="stylesheet" href="css/styles.css" />
+        <link rel="stylesheet" href="css/components/base.css" />
+    <link rel="stylesheet" href="css/components/header.css" />
+    <link rel="stylesheet" href="css/components/hero.css" />
+    <link rel="stylesheet" href="css/components/music-player.css" />
+    <link rel="stylesheet" href="css/components/sections.css" />
+    <link rel="stylesheet" href="css/components/about.css" />
+    <link rel="stylesheet" href="css/components/skills.css" />
+    <link rel="stylesheet" href="css/components/projects.css" />
+    <link rel="stylesheet" href="css/components/blog.css" />
+    <link rel="stylesheet" href="css/components/experience.css" />
+    <link rel="stylesheet" href="css/components/contact.css" />
+    <link rel="stylesheet" href="css/components/animations.css" />
+    <link rel="stylesheet" href="css/components/awards.css" />
+    <link rel="stylesheet" href="css/components/footer.css" />
+    <link rel="stylesheet" href="css/components/wakatime.css" />
+    <link rel="stylesheet" href="css/components/featured-projects.css" />
+    <link rel="stylesheet" href="css/components/interactive-skills.css" />
+    <link rel="stylesheet" href="css/components/theme.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
 </head>
 
@@ -493,7 +510,7 @@
                         <a href="post-mixamo-unity.html" class="blog-card-image-link">
                             <div class="blog-card-image">
                                 <!-- Bạn có thể tạo 1 ảnh thumbnail cho bài viết này -->
-                                <img src="assets/blog-thumb-unity.jpg" alt="A 3D character in Unity editor">
+                                <img src="assets/placeholder-600x400.png" alt="A 3D character in Unity editor">
                             </div>
                         </a>
                         <div class="blog-card-content">
@@ -512,7 +529,7 @@
                     <div class="blog-post-card glass-card animate-on-scroll">
                         <a href="post-unity-githubpages.html" class="blog-card-image-link">
                             <div class="blog-card-image">
-                                <img src="assets/blog-thumb-unity-deploy.jpg" alt="Unity logo and GitHub logo">
+                                <img src="assets/placeholder-600x400.png" alt="Unity logo and GitHub logo">
                             </div>
                         </a>
                         <div class="blog-card-content">
@@ -532,7 +549,7 @@
                     <div class="blog-post-card glass-card animate-on-scroll">
                         <a href="#" class="blog-card-image-link">
                             <div class="blog-card-image">
-                                <img src="assets/blog-thumb-docker.jpg" alt="Docker container logos">
+                                <img src="assets/placeholder-600x400.png" alt="Docker container logos">
                             </div>
                         </a>
                         <div class="blog-card-content">
@@ -597,7 +614,7 @@
                         </div>
                     </div>
                     <!-- Form liên hệ - Bạn cần một dịch vụ backend như Formspree để nó hoạt động -->
-                    <form class="contact-form glass-card animate-on-scroll" action="https://formspree.io/f/YOUR_FORM_ID"
+                    <form class="contact-form glass-card animate-on-scroll" action="https://formspree.io/f/xpwozknb"
                         method="POST">
                         <h3>Send Me a Message</h3>
                         <div class="form-group">
