--- a/halloween.html
+++ b/halloween.html
@@ -213,6 +213,9 @@
             <i class="fas fa-volume-high"></i>
         </div>
 
+                <!-- ====================================================== -->
+        <!-- Section 2: About Me (CẬP NHẬT) -->
+        <!-- ====================================================== -->
         <section id="about" class="content-section">
             <div class="container">
                 <div class="section-header animate-on-scroll">
@@ -223,109 +226,75 @@
                 <div class="about-grid">
                     <div class="about-image-wrapper animate-on-scroll">
                         <img src="assets/my_image.jpg" alt="A pensive anime character in a snowy city scene">
-                        <div class="status-tag"><span class="green-dot"></span> Available for work</div>
+                        <div class="status-tag">
+                            <span class="green-dot"></span> Available for work
+                        </div>
                     </div>
                     <div class="about-text-content animate-on-scroll">
-                        <p>I am a dedicated Software Engineering student at Ton Duc Thang University with a deep passion for building efficient and user-friendly web solutions. My journey into programming started with a curiosity to understand how things work, and it has grown into a drive to create meaningful applications.</p>
-                        <p>I enjoy tackling challenging problems and continuously expanding my skill set in the ever-evolving world of technology. From developing full-stack e-commerce platforms to creating fun, interactive web apps, my goal is to leverage my technical abilities to build impactful products.</p>
+                        <p>I am a dedicated Software Engineering student at Ton Duc Thang University with a deep passion
+                            for building efficient and user-friendly web solutions. My journey into programming started
+                            with a curiosity to understand how things work, and it has grown into a drive to create
+                            meaningful applications.</p>
+                        <p>I enjoy tackling challenging problems and continuously expanding my skill set in the
+                            ever-evolving world of technology. From developing full-stack e-commerce platforms to
+                            creating fun, interactive web apps, my goal is to leverage my technical abilities to build
+                            impactful products.</p>
                         <div class="info-box-wrapper glass-card">
                             <div class="info-box">
-                                <div><span class="info-label">Name</span><p>Trần Hữu Đạt</p></div>
-                                <div><span class="info-label">Email</span><p>tranhuudat.cv@gmail.com</p></div>
-                                <div><span class="info-label">Location</span><p>Ho Chi Minh City, VN</p></div>
-                                <div><span class="info-label">Availability</span><p class="available-status">Open to Internship</p></div>
+                                <div>
+                                    <span class="info-label">Name</span>
+                                    <p>Trần Hữu Đạt</p>
+                                </div>
+                                <div>
+                                    <span class="info-label">Email</span>
+                                    <p>tranhuudat.cv@gmail.com</p>
+                                </div>
+                                <div>
+                                    <span class="info-label">Location</span>
+                                    <p>Ho Chi Minh City, VN</p>
+                                </div>
+                                <div>
+                                    <span class="info-label">Availability</span>
+                                    <p class="available-status">Open to Internship</p>
+                                </div>
                             </div>
-                            <a href="download-resume.html" download class="btn-download-resume">Download Resume <i class="fas fa-download"></i></a>
+                            <a href="download-resume.html" download class="btn-download-resume">Download Resume <i
+                                    class="fas fa-download"></i></a>
                         </div>
                     </div>
                 </div>
             </div>
         </section>
 
+        <!-- ====================================================== -->
+        <!-- Section 3: Skills (CẬP NHẬT) -->
+        <!-- ====================================================== -->
         <section id="skills" class="content-section">
             <div class="container">
                 <div class="section-header animate-on-scroll">
+                    <!-- Thêm lại badge "My Skills" -->
                     <div class="section-badge">My Skills</div>
+                    <!-- Đổi tiêu đề -->
                     <h2 class="section-title">Technical Stack</h2>
                     <div class="title-underline"></div>
                 </div>
-                <div class="skills-wrapper"><div class="skills-grid"><p class="skills-loading"><i class="fas fa-spinner fa-spin"></i> Loading technical skills...</p></div></div>
-            </div>
-        </section>
 
-        <section id="projects" class="content-section">
-            <div class="container">
-                <div class="section-header animate-on-scroll">
-                    <div class="section-badge">Some of my recent work</div>
-                    <h2 class="section-title">Featured Projects</h2>
-                    <div class="title-underline"></div>
-                </div>
-                <div class="project-showcase-grid animate-on-scroll">
-                    <div class="showcase-card">
-                        <div class="showcase-header"><span>Omacha Project</span></div>
-                        <div class="showcase-content">
-                            <div class="text-features">
-                                <h1>OMACHA SHOP<br>E-COMMERCE</h1>
-                                <h4 class="feature-title">FEATURES</h4>
-                                <ul>
-                                    <li>Full-stack e-commerce platform built with PHP & MySQL.</li>
-                                    <li>Robust admin panel for product, order, and user management.</li>
-                                    <li>Responsive design ensuring a seamless experience on all devices.</li>
-                                </ul>
-                            </div>
-                            <div class="image-gallery">
-                                <img src="assets/omacha/Home1.jpg" alt="Omacha Homepage" class="showcase-img">
-                                <img src="assets/omacha/product_detail.jpg" alt="Omacha Homepage" class="showcase-img">
-                            </div>
-                        </div>
-                    </div>
-                    <div class="details-column">
-                        <h2>Omacha Shop</h2>
-                        <p class="project-category">Web, E-commerce, Full-stack</p>
-                        <div class="project-tags"><span>PHP</span><span>MySQL</span><span>JavaScript</span><span>Bootstrap</span></div>
-                        <div class="description-box glass-card"><p>A comprehensive toy e-commerce platform designed for a fun shopping experience and powerful admin tools.</p></div>
-                        <div class="project-links">
-                            <a href="https://github.com/TranHuuDat2004/Omacha_Shop" target="_blank" aria-label="GitHub"><i class="fab fa-github"></i></a>
-                            <a href="https://tranhuudat2004.github.io/Omacha-Shop-Demo/" aria-label="Project Details"><i class="fas fa-link"></i></a>
-                        </div>
+                <div class="skills-wrapper">
+                    <div class="skills-grid">
+                        <!-- JavaScript sẽ tự động chèn các thanh kỹ năng vào đây -->
+                        <p class="skills-loading">
+                            <i class="fas fa-spinner fa-spin"></i> Loading technical skills...
+                        </p>
                     </div>
                 </div>
             </div>
         </section>
 
-        <section id="experience" class="content-section">
-            <div class="container">
-                <div class="section-header animate-on-scroll">
-                    <div class="section-badge">My professional journey</div>
-                    <h2 class="section-title">Experience & Education</h2>
-                    <div class="title-underline"></div>
-                </div>
-                <div class="timeline">
-                    <div class="timeline-item animate-on-scroll">
-                        <div class="timeline-dot"></div>
-                        <div class="timeline-content glass-card">
-                            <h3>Bachelor of Software Engineering</h3>
-                            <p class="timeline-meta">Ton Duc Thang University | 2022 - 2026</p>
-                            <p>Building a strong foundation in computer science, algorithms, and web development principles, while maintaining a GPA of 7.8/10.</p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </section>
 
-        <section id="blog" class="content-section">
-            <div class="container">
-                <div class="section-header animate-on-scroll">
-                    <div class="section-badge">Sharing my knowledge</div>
-                    <h2 class="section-title">From The Blog (Maintenance)</h2>
-                    <div class="title-underline"></div>
-                </div>
-                <div class="blog-grid"></div>
-                <div class="view-all-posts-container animate-on-scroll"><a href="blog.html" class="btn btn-secondary">View All Posts</a></div>
-            </div>
-        </section>
+        <!-- Nơi các section chung sẽ được tải vào -->
+        <div id="main-content-sections"></div>
+        
     </main>
-
     <footer class="main-footer">
         <div class="container footer-container">
             <div class="footer-column footer-about">
@@ -361,6 +330,8 @@
     <audio id="audio-source"></audio>
     <script src="js/playlist.js"></script>
     <script src="js/scripts.js"></script>
+     <!-- === TẢI CÁC SECTION CHUNG === -->
+    <script src="js/load-sections.js"></script>
     <script>
         // Halloween specific scripts
         document.addEventListener('DOMContentLoaded', () => {
